--- a/desktop.ini
+++ b/desktop.ini
@@ -1,2 +1,3 @@
 [LocalizedFileNames]
 RLBotServer.exe=@RLBotServer,0
+#Dont mind this file, this file is created when I upload these files from my computer using git to github
