--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Build release distributions
         run: |
           # NOTE: put your own distribution build steps here.
-          python -m pip install -r requirements.txt
+          python -m pip install --upgrade -r requirements.txt
           
 
       - name: Upload distributions
