--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -1,11 +1,6 @@
 # This workflow will upload a Python Package to PyPI when a release is created
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python#publishing-to-package-registries
 
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
 name: ExampleRocketLeagueBot
 
 on:
@@ -19,18 +14,34 @@ jobs:
   release-build:
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        python-version: [3.10, 3.11, 3.12, 3.13, 3.14] # Add support for multiple Python versions
+
     steps:
       - uses: actions/checkout@v4
 
       - uses: actions/setup-python@v5
         with:
-          python-version: "3.x"
+          python-version: ${{ matrix.python-version }}
+
+      - name: Install dependencies
+        run: python -m pip install --upgrade pip -r requirements.txt
+
+      - name: Run linter
+        run: |
+          python -m pip install flake8
+          flake8 .
+
+      - name: Run tests
+        run: |
+          python -m pip install pytest
+          pytest
 
       - name: Build release distributions
         run: |
-          # NOTE: put your own distribution build steps here.
-          python -m pip install --upgrade -r requirements.txt
-          
+          python -m pip install --upgrade build
+          python -m build
 
       - name: Upload distributions
         uses: actions/upload-artifact@v4
@@ -43,18 +54,11 @@ jobs:
     needs:
       - release-build
     permissions:
-      # IMPORTANT: this permission is mandatory for trusted publishing
       id-token: write
 
-    # Dedicated environments with protections for publishing are strongly recommended.
-    # For more information, see: https://docs.github.com/en/actions/deployment/targeting-different-environments/using-environments-for-deployment#deployment-protection-rules
     environment:
       name: pypi
-      # OPTIONAL: uncomment and update to include your PyPI project URL in the deployment status:
-      # url: https://pypi.org/p/YOURPROJECT
-      #
-      # ALTERNATIVE: if your GitHub Release name is the PyPI project version string
-      # ALTERNATIVE: exactly, uncomment the following line instead:
+      # OPTIONAL: Uncomment and update the URL if your GitHub Release name matches your PyPI project version
       # url: https://pypi.org/project/YOURPROJECT/${{ github.event.release.name }}
 
     steps:
